Successfully scraped information about triple point/critical temp and pres. Pandas data array still seems a bit weird - have to check on that.

--- a/02_16_19_beautifulsoup_debug.ipynb
+++ b/02_16_19_beautifulsoup_debug.ipynb
@@ -23,7 +23,7 @@
     "prices = [] # List to store price of the product\n",
     "ratings = [] # List to store rating of the products\n",
     "\n",
-    "driver.get('https://webbook.nist.gov/cgi/cbook.cgi?Formula=N2&NoIon=on&Units=SI')"
+    "driver.get('https://webbook.nist.gov/cgi/cbook.cgi?ID=C7727379&Units=SI&Mask=4#Thermo-Phase')"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,9 @@
      "output_type": "stream",
      "text": [
       "28.0134\n",
-      "InChI=1S/N2/c1-2\n"
+      "InChI=1S/N2/c1-2\n",
+      "IJGRMHOSHXDMSA-UHFFFAOYSA-N\n",
+      "7727-37-9\n"
      ]
     }
    ],
@@ -62,45 +64,58 @@
     "    #print('{}: {}'.format(i, a))\n",
     "    if i == 1:\n",
     "        print(str(a).split('</strong> ')[1].split('<')[0])\n",
-    "        data['MW'] = [str(a).split('</strong> ')[1].split('<')[0]]\n",
+    "        data['Molecular Weight'] = [str(a).split('</strong> ')[1].split('<')[0]]\n",
     "    if i == 2:\n",
     "        print(str(a).split('monospace;\">')[1].split('</span></li>')[0])\n",
-    "        data['ID'] = [str(a).split('monospace;\">')[1].split('</span></li>')[0]]"
+    "        data['InChI Code'] = [str(a).split('monospace;\">')[1].split('</span></li>')[0]]\n",
+    "    if i == 5:\n",
+    "        print(str(a).split('font-family: monospace;\">')[1].split('</span></li>')[0])\n",
+    "        data['InChIKey Code'] = str(a).split('font-family: monospace;\">')[1].split('</span></li>')[0]\n",
+    "    if i == 6:\n",
+    "        print(str(a).split('</strong> ')[1].split('</li>')[0])\n",
+    "        data['CAS Reg. #'] = str(a).split('</strong> ')[1].split('</li>')[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'MW': ['28.0134'], 'ID': ['InChI=1S/N2/c1-2']}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "dt = pd.DataFrame(data)\n",
-    "#dt = dt.set_index('ID')"
+    "#dt = dt.set_index('ID')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63.14\n",
+      "0.1252\n",
+      "126.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, a in enumerate(soup.find('table', attrs = {'aria-label': 'One dimensional data'}).find('tbody').find_all('tr')):\n",
+    "    #print('{}: {}'.format(i, a))\n",
+    "    if i == 6:\n",
+    "        print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
+    "    if i == 11:\n",
+    "        print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
+    "    if i == 16:\n",
+    "        print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -125,102 +140,128 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>MW</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>ID</th>\n",
-       "      <th></th>\n",
+       "      <th>CAS Reg. #</th>\n",
+       "      <th>InChI Code</th>\n",
+       "      <th>InChIKey Code</th>\n",
+       "      <th>Molecular Weight</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>InChI=1S/N2/c1-2</th>\n",
+       "      <td>0</td>\n",
        "      <td>28.0134</td>\n",
+       "      <td>InChI=1S/N2/c1-2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7727-37-9</td>\n",
+       "      <td>[InChI=1S/N2/c1-2]</td>\n",
+       "      <td>IJGRMHOSHXDMSA-UHFFFAOYSA-N</td>\n",
+       "      <td>[28.0134]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       MW\n",
-       "ID                       \n",
-       "InChI=1S/N2/c1-2  28.0134"
+       "        MW                ID CAS Reg. #          InChI Code  \\\n",
+       "0  28.0134  InChI=1S/N2/c1-2        NaN                 NaN   \n",
+       "1      NaN               NaN  7727-37-9  [InChI=1S/N2/c1-2]   \n",
+       "\n",
+       "                 InChIKey Code Molecular Weight  \n",
+       "0                          NaN              NaN  \n",
+       "1  IJGRMHOSHXDMSA-UHFFFAOYSA-N        [28.0134]  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.append(data, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MW</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>CAS Reg. #</th>\n",
+       "      <th>InChI Code</th>\n",
+       "      <th>InChIKey Code</th>\n",
+       "      <th>Molecular Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>28.0134</td>\n",
+       "      <td>InChI=1S/N2/c1-2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7727-37-9</td>\n",
+       "      <td>[InChI=1S/N2/c1-2]</td>\n",
+       "      <td>IJGRMHOSHXDMSA-UHFFFAOYSA-N</td>\n",
+       "      <td>[28.0134]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        MW                ID CAS Reg. #          InChI Code  \\\n",
+       "0  28.0134  InChI=1S/N2/c1-2        NaN                 NaN   \n",
+       "1      NaN               NaN  7727-37-9  [InChI=1S/N2/c1-2]   \n",
+       "\n",
+       "                 InChIKey Code Molecular Weight  \n",
+       "0                          NaN              NaN  \n",
+       "1  IJGRMHOSHXDMSA-UHFFFAOYSA-N        [28.0134]  "
+      ]
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data2 = {'MW': '29.25', 'ID': 'test'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MW</th>\n",
-       "      <th>ID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>28.0134</td>\n",
-       "      <td>InChI=1S/N2/c1-2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>29.25</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        MW                ID\n",
-       "0  28.0134  InChI=1S/N2/c1-2\n",
-       "1    29.25              test"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dt.append(data2, ignore_index=True)"
-   ]
   },
   {
    "cell_type": "code",
@@ -246,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
