Made a class object for pulling data from NIST

--- a/02_16_19_beautifulsoup_debug.ipynb
+++ b/02_16_19_beautifulsoup_debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,23 @@
     "prices = [] # List to store price of the product\n",
     "ratings = [] # List to store rating of the products\n",
     "\n",
-    "driver.get('https://webbook.nist.gov/cgi/cbook.cgi?ID=C7727379&Units=SI&Mask=4#Thermo-Phase')"
+    "\n",
+    "#driver.get('https://webbook.nist.gov/cgi/cbook.cgi?ID=C7727379&Units=SI&Mask=4#Thermo-Phase')\n",
+    "driver.get('https://webbook.nist.gov/cgi/cbook.cgi?ID=C7782447&Units=SI&Mask=4#Thermo-Phase')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.0134\n",
-      "InChI=1S/N2/c1-2\n",
-      "IJGRMHOSHXDMSA-UHFFFAOYSA-N\n",
-      "7727-37-9\n"
+      "31.9988\n",
+      "InChI=1S/O2/c1-2\n",
+      "MYMOFIZGZYHOMD-UHFFFAOYSA-N\n",
+      "7782-44-7\n"
      ]
     }
    ],
@@ -78,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,29 +99,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63.14\n",
-      "0.1252\n",
-      "126.19\n"
+      "0: <tr>\n",
+      "<th scope=\"col\">Quantity</th>\n",
+      "<th scope=\"col\">Value</th>\n",
+      "<th scope=\"col\">Units</th>\n",
+      "<th scope=\"col\">Method</th>\n",
+      "<th scope=\"col\">Reference</th>\n",
+      "<th scope=\"col\">Comment</th>\n",
+      "</tr>\n",
+      "1: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>boil</sub></td><td class=\"right-nowrap\">77.34</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-1\">Jacobsen, Stewart, et al., 1986</a></td><td style=\"text-align: left;\"><em>TRC</em></td></tr>\n",
+      "2: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>boil</sub></td><td class=\"right-nowrap\">77.4</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-2\">Streng, 1971</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.3 K; <em>TRC</em></td></tr>\n",
+      "3: <tr>\n",
+      "<th scope=\"col\">Quantity</th>\n",
+      "<th scope=\"col\">Value</th>\n",
+      "<th scope=\"col\">Units</th>\n",
+      "<th scope=\"col\">Method</th>\n",
+      "<th scope=\"col\">Reference</th>\n",
+      "<th scope=\"col\">Comment</th>\n",
+      "</tr>\n",
+      "4: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>fus</sub></td><td class=\"right-nowrap\">63.3</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-2\">Streng, 1971</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.3 K; <em>TRC</em></td></tr>\n",
+      "5: <tr>\n",
+      "<th scope=\"col\">Quantity</th>\n",
+      "<th scope=\"col\">Value</th>\n",
+      "<th scope=\"col\">Units</th>\n",
+      "<th scope=\"col\">Method</th>\n",
+      "<th scope=\"col\">Reference</th>\n",
+      "<th scope=\"col\">Comment</th>\n",
+      "</tr>\n",
+      "6: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>triple</sub></td><td class=\"right-nowrap\">63.14</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-1\">Jacobsen, Stewart, et al., 1986</a></td><td style=\"text-align: left;\"><em>TRC</em></td></tr>\n",
+      "7: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>triple</sub></td><td class=\"right-nowrap\">63.14</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-3\">Angus, de Reuck, et al., 1979</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.005 K; <em>TRC</em></td></tr>\n",
+      "8: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>triple</sub></td><td class=\"right-nowrap\">63.14</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-4\">Henning and Otto, 1936</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.06 K; temperature measured with He gas thermometer; <em>TRC</em></td></tr>\n",
+      "9: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>triple</sub></td><td class=\"right-nowrap\">63.13</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-5\">Giauque and Clayton, 1933</a></td><td style=\"text-align: left;\">Crystal phase 1 phase; Uncertainty assigned by TRC =  0.06 K; <em>TRC</em></td></tr>\n",
+      "10: <tr>\n",
+      "<th scope=\"col\">Quantity</th>\n",
+      "<th scope=\"col\">Value</th>\n",
+      "<th scope=\"col\">Units</th>\n",
+      "<th scope=\"col\">Method</th>\n",
+      "<th scope=\"col\">Reference</th>\n",
+      "<th scope=\"col\">Comment</th>\n",
+      "</tr>\n",
+      "11: <tr class=\"exp\"><td style=\"text-align: left;\">P<sub>triple</sub></td><td class=\"right-nowrap\">0.1252</td><td style=\"text-align: right;\">bar</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-1\">Jacobsen, Stewart, et al., 1986</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.0005 bar; <em>TRC</em></td></tr>\n",
+      "12: <tr class=\"exp\"><td style=\"text-align: left;\">P<sub>triple</sub></td><td class=\"right-nowrap\">0.1253</td><td style=\"text-align: right;\">bar</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-3\">Angus, de Reuck, et al., 1979</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.0002 bar; <em>TRC</em></td></tr>\n",
+      "13: <tr class=\"exp\"><td style=\"text-align: left;\">P<sub>triple</sub></td><td class=\"right-nowrap\">0.126</td><td style=\"text-align: right;\">bar</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-4\">Henning and Otto, 1936</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.0007 bar; <em>TRC</em></td></tr>\n",
+      "14: <tr class=\"exp\"><td style=\"text-align: left;\">P<sub>triple</sub></td><td class=\"right-nowrap\">0.1253</td><td style=\"text-align: right;\">bar</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-5\">Giauque and Clayton, 1933</a></td><td style=\"text-align: left;\">Crystal phase 1 phase; Uncertainty assigned by TRC =  0.0001 bar; Average Pressure; <em>TRC</em></td></tr>\n",
+      "15: <tr>\n",
+      "<th scope=\"col\">Quantity</th>\n",
+      "<th scope=\"col\">Value</th>\n",
+      "<th scope=\"col\">Units</th>\n",
+      "<th scope=\"col\">Method</th>\n",
+      "<th scope=\"col\">Reference</th>\n",
+      "<th scope=\"col\">Comment</th>\n",
+      "</tr>\n",
+      "16: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>c</sub></td><td class=\"right-nowrap\">126.19</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-1\">Jacobsen, Stewart, et al., 1986</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.01 K; <em>TRC</em></td></tr>\n",
+      "17: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>c</sub></td><td class=\"right-nowrap\">126.2</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-3\">Angus, de Reuck, et al., 1979</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.05 K; <em>TRC</em></td></tr>\n",
+      "18: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>c</sub></td><td class=\"right-nowrap\">126.2</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-6\">Weber, 1970</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.2 K; IPTS-68, critical point not observed and Tc taken from literature but equation would allow pc to be calculated. Tc unct. several tenths K. \"Ultra-high\" purity nitrogen.; <em>TRC</em></td></tr>\n",
+      "19: <tr class=\"exp\"><td style=\"text-align: left;\">T<sub>c</sub></td><td class=\"right-nowrap\">128.45</td><td style=\"text-align: right;\">K</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-7\">Cardoso, 1915</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.5 K; <em>TRC</em></td></tr>\n",
+      "20: <tr>\n",
+      "<th scope=\"col\">Quantity</th>\n",
+      "<th scope=\"col\">Value</th>\n",
+      "<th scope=\"col\">Units</th>\n",
+      "<th scope=\"col\">Method</th>\n",
+      "<th scope=\"col\">Reference</th>\n",
+      "<th scope=\"col\">Comment</th>\n",
+      "</tr>\n",
+      "21: <tr class=\"exp\"><td style=\"text-align: left;\">P<sub>c</sub></td><td class=\"right-nowrap\">33.978</td><td style=\"text-align: right;\">bar</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-1\">Jacobsen, Stewart, et al., 1986</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.007 bar; <em>TRC</em></td></tr>\n",
+      "22: <tr class=\"exp\"><td style=\"text-align: left;\">P<sub>c</sub></td><td class=\"right-nowrap\">34.00</td><td style=\"text-align: right;\">bar</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-3\">Angus, de Reuck, et al., 1979</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.05 bar; <em>TRC</em></td></tr>\n",
+      "23: <tr class=\"exp\"><td style=\"text-align: left;\">P<sub>c</sub></td><td class=\"right-nowrap\">3.0698</td><td style=\"text-align: right;\">bar</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-7\">Cardoso, 1915</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.003 bar; <em>TRC</em></td></tr>\n",
+      "24: <tr class=\"exp\"><td style=\"text-align: left;\">P<sub>c</sub></td><td class=\"right-nowrap\">3.0682</td><td style=\"text-align: right;\">bar</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-7\">Cardoso, 1915</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.003 bar; <em>TRC</em></td></tr>\n",
+      "25: <tr>\n",
+      "<th scope=\"col\">Quantity</th>\n",
+      "<th scope=\"col\">Value</th>\n",
+      "<th scope=\"col\">Units</th>\n",
+      "<th scope=\"col\">Method</th>\n",
+      "<th scope=\"col\">Reference</th>\n",
+      "<th scope=\"col\">Comment</th>\n",
+      "</tr>\n",
+      "26: <tr class=\"exp\"><td style=\"text-align: left;\">ρ<sub>c</sub></td><td class=\"right-nowrap\">11.18</td><td style=\"text-align: right;\">mol/l</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-1\">Jacobsen, Stewart, et al., 1986</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.02 mol/l; <em>TRC</em></td></tr>\n",
+      "27: <tr class=\"exp\"><td style=\"text-align: left;\">ρ<sub>c</sub></td><td class=\"right-nowrap\">11.2</td><td style=\"text-align: right;\">mol/l</td><td style=\"text-align: center;\">N/A</td><td style=\"text-align: left;\"><a href=\"#ref-3\">Angus, de Reuck, et al., 1979</a></td><td style=\"text-align: left;\">Uncertainty assigned by TRC =  0.02 mol/l; <em>TRC</em></td></tr>\n"
      ]
     }
    ],
    "source": [
     "for i, a in enumerate(soup.find('table', attrs = {'aria-label': 'One dimensional data'}).find('tbody').find_all('tr')):\n",
-    "    #print('{}: {}'.format(i, a))\n",
-    "    if i == 6:\n",
-    "        print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
-    "    if i == 11:\n",
-    "        print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
-    "    if i == 16:\n",
-    "        print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
+    "    print('{}: {}'.format(i, a))\n",
+    "#     if i == 6:\n",
+    "#         print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
+    "#     if i == 11:\n",
+    "#         print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
+    "#     if i == 16:\n",
+    "#         print(str(a).split('-nowrap\">')[1].split('</td')[0])\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = str(soup.find('table', attrs = {'aria-label': 'One dimensional data'}).find('tbody'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'54.33'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.split('T<sub>triple</sub></td><td class=\"right-nowrap\">')[1].split('</td>')[0]"
    ]
   },
   {
@@ -287,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
